# just-nobody-avax

./: .gitignore  OLLAMA_INTEGRATION.md  README.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: launch.json
contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: CabalMeshVoucher.sol  Escrow.sol  Marketplace.sol
contracts/deployments/: fuji.json
contracts/scripts/: deploy.ts  deployMarketplace.ts
contracts/test/: CabalMeshVoucher.test.ts  Escrow.test.ts  Marketplace.test.ts
scripts/: dev-2-nodes.sh
src/: App.tsx  avalanche-settlement.ts  styles.css  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json  tauri.node2.conf.json
src-tauri/src/: agent.rs  app_initializer.rs  blockchain_bridge.rs  lib.rs  llm_json.rs  main.rs  matcher.rs  mesh.rs  zk_handler.rs
src/abi/: CabalMeshVoucher.abi.json  Escrow.abi.json  Marketplace.abi.json
src/components/: ActiveListingsCompact.tsx  AgentLog.tsx  AmbientParticles.tsx  Archives.tsx  ConfidentialCompute.tsx  DailyReport.tsx  DealNotification.tsx  DelegationCenter.tsx  ErrorBoundary.tsx  Feed.tsx  IdentityInitialization.tsx  IntegrityShield.tsx  IntentComposer.tsx  ItemCard.tsx  MeshCharacterField.tsx  MeshRadar.tsx  Nexus.tsx  NodeConfig.tsx  NotificationToast.tsx  OfflineQueue.tsx  OnboardingHint.tsx  ProviderDashboard.tsx  QuestLogPanel.tsx  RadiantHalo.tsx  RedeemVoucher.tsx  RelayerStatus.tsx  RelayerStatusCompact.tsx  SearchQueue.tsx  ServiceCreator.tsx  ShieldedWallet.tsx  SmartEscrow.tsx  (+4 more)
(+8 files in other folders)
