[package]
name = "cabalmesh"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cabalmesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Mesh Networking (libp2p)
libp2p = { version = "0.54", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "tokio"] }
libp2p-swarm = { version = "0.45", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# HTTP Client for Ollama AI
reqwest = { version = "0.11", features = ["json"] }

# Additional utilities
futures = "0.3"
async-trait = "0.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
alloy = { version = "1", features = ["full"] }
keyring = "3.6.3"
rand = "0.9.2"
aes-gcm = "0.10.3"
base64 = "0.22.1"
dotenv = "0.15.0"
dirs = "5"

